arreglando aspecto y plantendo el modelo de rezagos infinito el cual sera evaluado

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ApendiceKoyck</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <style>
+        body {
+            margin: 20px auto;
+            max-width: 800px;
+            padding: 0 20px;
+        }
+    </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,200;1,400;1,500;1,600&display=swap');
+
+        body {
+            font-family: 'Crimson Pro', serif;
+        }
+    </style>
+    <style>
+        body {
+            font-size: 1.5em; /* Aumenta el tamaño de todas las fuentes en un 20% */
+        }
+    </style>
 </head>
 <body>
+    <header> 
+        <h1>Apendice matemático para Koyck</h1>
+    </header>
+    <main>
+        <h2>1. Demostracion de la transformación del modelo de Koyck a partir del modelo de Rezagos Infinito</h2>
+        <p>
+            Por el momento planteamos el Modelo de Rezagos Infinitos solamente:
+            <br>
+            $$Y_{t}=\alpha + \beta_{0}X_{t}+\beta_{1}X_{t-1}+\beta_{2}X_{t-2}+\beta_{3}X_{t-3}+ ... +\mu_{t}$$
+        </p>
+    </main>
     
 </body>
 </html>
