--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
     <header> 
+        <h1 style="color: #BB2649;">ISMAEL GIANCARLO AGUEDO AGUILAR</h1>
         <h1>Apendice matemático para Koyck</h1>
     </header>
     <main>
